until here it works, next push will be starting to work on compressing the info

--- a/preprocessing/feature_evaluation_dim_reduced.ipynb
+++ b/preprocessing/feature_evaluation_dim_reduced.ipynb
@@ -2,16 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -67,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,53 +341,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id mateches {1: (23, 0), 2: (12, 0), 3: (1, 0), 4: (5, 0), 5: (20, 0), 6: (8, 0), 7: (18, 0), 8: (9, 0), 9: (20, 0), 10: (10, 0), 11: (9, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  5.  8.  9. 10. 12. 18. 20. 23.]\n",
+      "id mateches {1: (23, array([0.01570327], dtype=float32)), 2: (12, array([0.01312272], dtype=float32)), 3: (1, array([0.02637017], dtype=float32)), 4: (5, array([0.00739837], dtype=float32)), 5: (9, array([0.0159371], dtype=float32)), 6: (8, array([0.01632525], dtype=float32)), 7: (18, array([0.02054708], dtype=float32)), 8: (9, array([0.00719253], dtype=float32)), 9: (11, array([0.01522948], dtype=float32)), 10: (10, array([0.00754274], dtype=float32)), 11: (5, array([0.01760075], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  5.  8.  9. 10. 11. 12. 18. 23.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.3663194444444444, 0.3663194444444444)\n",
-      "id mateches {1: (23, 0), 2: (27, 0), 3: (27, 0), 4: (26, 0), 5: (18, 0), 6: (1, 0), 7: (4, 0), 8: (5, 0), 9: (8, 0), 10: (9, 0), 11: (8, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  4.  5.  8.  9. 18. 23. 26. 27.]\n",
-      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5277777777777778, 0.5277777777777778)\n",
-      "id mateches {1: (26, 0), 2: (21, 0), 3: (8, 0), 4: (22, 0), 5: (18, 0), 6: (1, 0), 7: (3, 0), 8: (20, 0), 9: (20, 0), 10: (8, 0), 11: (100, 0), 12: (8, 0), 13: (1, 0), 14: (5, 0), 15: (103, 0)}\n",
-      "unique numbers in new img patchwise  [  1.   3.   5.   8.  18.  20.  21.  22.  26. 100. 103.]\n",
+      "id mateches {1: (23, array([0.02890418], dtype=float32)), 2: (27, array([0.01526387], dtype=float32)), 3: (27, array([0.00507575], dtype=float32)), 4: (22, array([0.02434961], dtype=float32)), 5: (8, array([0.01412568], dtype=float32)), 6: (1, array([0.02946728], dtype=float32)), 7: (4, array([0.00834342], dtype=float32)), 8: (20, array([0.00536672], dtype=float32)), 9: (8, array([0.02702678], dtype=float32)), 10: (2, array([0.00914445], dtype=float32)), 11: (1, array([0.00797968], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  2.  4.  8. 20. 22. 23. 27.]\n",
+      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5416666666666666, 0.5416666666666666)\n",
+      "id mateches {1: (26, array([0.01202647], dtype=float32)), 2: (21, array([0.02524503], dtype=float32)), 3: (24, array([0.00897213], dtype=float32)), 4: (22, array([0.03573671], dtype=float32)), 5: (18, array([0.01583523], dtype=float32)), 6: (1, array([0.02371688], dtype=float32)), 7: (3, array([0.01119746], dtype=float32)), 8: (20, array([0.0151446], dtype=float32)), 9: (20, array([0.00879547], dtype=float32)), 10: (11, array([0.00762003], dtype=float32)), 11: (11, array([0.00954886], dtype=float32)), 12: (8, array([0.02242653], dtype=float32)), 13: (1, array([0.01104789], dtype=float32)), 14: (3, array([0.01909309], dtype=float32)), 15: (103, array([0.0082426], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [  1.   3.   8.  11.  18.  20.  21.  22.  24.  26. 103.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.515625, 0.515625)\n",
-      "id mateches {1: (26, 0), 2: (26, 0), 3: (1, 0), 4: (1, 0), 5: (3, 0), 6: (8, 0), 7: (8, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  3.  8. 26.]\n",
+      "id mateches {1: (26, array([0.01065832], dtype=float32)), 2: (22, array([0.0252062], dtype=float32)), 3: (1, array([0.01333159], dtype=float32)), 4: (1, array([0.02454306], dtype=float32)), 5: (6, array([0.0133764], dtype=float32)), 6: (8, array([0.02142951], dtype=float32)), 7: (5, array([0.01204913], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  5.  6.  8. 22. 26.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5607638888888888, 0.5607638888888888)\n",
-      "id mateches {1: (26, 0), 2: (22, 0), 3: (23, 0), 4: (1, 0), 5: (8, 0), 6: (6, 0), 7: (3, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  3.  6.  8. 22. 23. 26.]\n",
+      "id mateches {1: (26, array([0.01185611], dtype=float32)), 2: (22, array([0.00481515], dtype=float32)), 3: (26, array([0.01362899], dtype=float32)), 4: (1, array([0.0236815], dtype=float32)), 5: (8, array([0.0145503], dtype=float32)), 6: (6, array([0.01989206], dtype=float32)), 7: (2, array([0.01205223], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  2.  6.  8. 22. 26.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5486111111111112, 0.5486111111111112)\n",
-      "id mateches {1: (26, 0), 2: (8, 0), 3: (1, 0), 4: (100, 0)}\n",
-      "unique numbers in new img patchwise  [  1.   8.  26. 100.]\n",
-      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.546875, 0.546875)\n",
-      "id mateches {1: (26, 0), 2: (8, 0), 3: (11, 0), 4: (1, 0), 5: (1, 0), 6: (5, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  5.  8. 11. 26.]\n",
-      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5711805555555556, 0.5711805555555556)\n",
-      "id mateches {1: (22, 0), 2: (11, 0), 3: (2, 0), 4: (1, 0), 5: (9, 0), 6: (12, 0), 7: (11, 0), 8: (20, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  2.  9. 11. 12. 20. 22.]\n",
-      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6666666666666666, 0.6666666666666666)\n",
-      "id mateches {1: (20, 0), 2: (26, 0), 3: (100, 0), 4: (8, 0), 5: (8, 0), 6: (1, 0), 7: (2, 0), 8: (8, 0), 9: (11, 0), 10: (8, 0), 11: (20, 0)}\n",
-      "unique numbers in new img patchwise  [  1.   2.   8.  11.  20.  26. 100.]\n",
-      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5746527777777778, 0.5746527777777778)\n",
-      "id mateches {1: (12, 0), 2: (8, 0), 3: (8, 0), 4: (8, 0), 5: (10, 0), 6: (27, 0), 7: (1, 0), 8: (100, 0), 9: (8, 0), 10: (10, 0)}\n",
-      "unique numbers in new img patchwise  [  1.   8.  10.  12.  27. 100.]\n",
+      "id mateches {1: (26, array([0.01400753], dtype=float32)), 2: (12, array([0.0113122], dtype=float32)), 3: (1, array([0.01167631], dtype=float32)), 4: (100, array([0.01328255], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [  1.  12.  26. 100.]\n",
+      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6006944444444444, 0.6006944444444444)\n",
+      "id mateches {1: (26, array([0.0171039], dtype=float32)), 2: (1, array([0.00605737], dtype=float32)), 3: (20, array([0.0172584], dtype=float32)), 4: (1, array([0.00771072], dtype=float32)), 5: (1, array([0.0209359], dtype=float32)), 6: (5, array([0.01264728], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  5. 20. 26.]\n",
+      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6006944444444444, 0.6006944444444444)\n",
+      "id mateches {1: (22, array([0.02175163], dtype=float32)), 2: (11, array([0.0103588], dtype=float32)), 3: (8, array([0.00425652], dtype=float32)), 4: (1, array([0.01351001], dtype=float32)), 5: (20, array([0.0149256], dtype=float32)), 6: (12, array([0.01384641], dtype=float32)), 7: (11, array([0.00765502], dtype=float32)), 8: (20, array([0.00820862], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  8. 11. 12. 20. 22.]\n",
+      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6631944444444444, 0.6631944444444444)\n",
+      "id mateches {1: (10, array([0.01616197], dtype=float32)), 2: (26, array([0.00555241], dtype=float32)), 3: (100, array([0.01794639], dtype=float32)), 4: (8, array([0.01908192], dtype=float32)), 5: (8, array([0.00891095], dtype=float32)), 6: (1, array([0.02480392], dtype=float32)), 7: (2, array([0.01241749], dtype=float32)), 8: (12, array([0.02260527], dtype=float32)), 9: (11, array([0.0106607], dtype=float32)), 10: (8, array([0.01770554], dtype=float32)), 11: (20, array([0.00505923], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [  1.   2.   8.  10.  11.  12.  20.  26. 100.]\n",
+      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5763888888888888, 0.5763888888888888)\n",
+      "id mateches {1: (12, array([0.01616702], dtype=float32)), 2: (18, array([0.01358708], dtype=float32)), 3: (8, array([0.01839471], dtype=float32)), 4: (8, array([0.01075059], dtype=float32)), 5: (10, array([0.02290128], dtype=float32)), 6: (27, array([0.01288162], dtype=float32)), 7: (1, array([0.00711795], dtype=float32)), 8: (9, array([0.01533557], dtype=float32)), 9: (8, array([0.01702167], dtype=float32)), 10: (10, array([0.01594201], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  8.  9. 10. 12. 18. 27.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.7517361111111112, 0.7517361111111112)\n",
-      "id mateches {1: (8, 0), 2: (11, 0), 3: (8, 0), 4: (1, 0), 5: (8, 0), 6: (5, 0), 7: (20, 0), 8: (9, 0), 9: (5, 0), 10: (29, 0), 11: (10, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  5.  8.  9. 10. 11. 20. 29.]\n",
-      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.7326388888888888, 0.7326388888888888)\n",
-      "id mateches {1: (1, 0), 2: (8, 0)}\n",
+      "id mateches {1: (8, array([0.01344401], dtype=float32)), 2: (11, array([0.01987344], dtype=float32)), 3: (29, array([0.01038167], dtype=float32)), 4: (1, array([0.00971259], dtype=float32)), 5: (8, array([0.02098707], dtype=float32)), 6: (15, array([0.00808654], dtype=float32)), 7: (10, array([0.01273002], dtype=float32)), 8: (20, array([0.00767714], dtype=float32)), 9: (6, array([0.01147991], dtype=float32)), 10: (29, array([0.00824384], dtype=float32)), 11: (1, array([0.00750556], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  6.  8. 10. 11. 15. 20. 29.]\n",
+      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6076388888888888, 0.6076388888888888)\n",
+      "id mateches {1: (1, array([0.01386196], dtype=float32)), 2: (8, array([0.00739832], dtype=float32))}\n",
       "unique numbers in new img patchwise  [1. 8.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6145833333333334, 0.6145833333333334)\n",
-      "id mateches {1: (5, 0), 2: (8, 0), 3: (1, 0), 4: (11, 0), 5: (1, 0), 6: (8, 0), 7: (20, 0), 8: (11, 0)}\n",
-      "unique numbers in new img patchwise  [ 1.  5.  8. 11. 20.]\n",
+      "id mateches {1: (5, array([0.00914396], dtype=float32)), 2: (8, array([0.01399027], dtype=float32)), 3: (1, array([0.01699795], dtype=float32)), 4: (11, array([0.01739462], dtype=float32)), 5: (1, array([0.02151607], dtype=float32)), 6: (10, array([0.01093858], dtype=float32)), 7: (20, array([0.01126606], dtype=float32)), 8: (11, array([0.00889421], dtype=float32))}\n",
+      "unique numbers in new img patchwise  [ 1.  5.  8. 10. 11. 20.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6388888888888888, 0.6388888888888888)\n",
-      "mean of total accuracy  0.5858707264957265\n"
+      "mean of total accuracy  0.5836004273504274\n"
      ]
     }
    ],
@@ -460,15 +457,16 @@
     "        distances = euclidean_distances(reduced_unseen_point, reduced_points)\n",
     "\n",
     "        #get closest 5 points\n",
-    "        num_neighbors = 5\n",
+    "        num_neighbors = 1\n",
     "        closest_indices = np.argsort(distances[0])[:num_neighbors]\n",
+    "        closest_distances = distances[0][closest_indices]\n",
     "\n",
     "        # classs of 5 closest points\n",
     "        closest_classes = all_ids[closest_indices]\n",
     "\n",
     "        # get the majority class and write into id_matches\n",
     "        most_common_class, count = Counter(closest_classes).most_common(1)[0]\n",
-    "        id_matches[img_id] = (most_common_class, 0)\n",
+    "        id_matches[img_id] = (most_common_class, closest_distances)\n",
     "\n",
     "\n",
     "    print(\"id mateches\", id_matches)\n",
