--- a/preprocessing/visualization_feature_vectors_2D.ipynb
+++ b/preprocessing/visualization_feature_vectors_2D.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -50,7 +53,7 @@
     "data_dir ='/local/home/ekoller/R3Scan'\n",
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes'\n",
     "#scan_id= \"38770c95-86d7-27b8-8717-3485b411ddc7\" #is reference scan  since it is a reference scan everything shouls be correctly hit\n",
-    "curr_scan_id = \"02b33dfb-be2b-2d54-92d2-cd012b2b3c40\" #\"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
+    "curr_scan_id = \"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
     "new_scan_id =  \"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
     "frame_number = \"000007\"\n",
     "curr_frame_number = \"000007\"\n",
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +174,7 @@
     "#get every fearure vector and average the patches to one patch\n",
     "for frame in all_features_curr_scene:\n",
     "    for obj_id in all_features_curr_scene[frame]:\n",
-    "        if obj_id != 0:\n",
+    "        if obj_id == 4 or obj_id== 6:\n",
     "            matrix = all_features_curr_scene[frame][obj_id]\n",
     "\n",
     "            aggregated_feature = np.mean(matrix, axis=0)  # Mean across patches\n",
