started adapting the code for the pca and stuff

--- a/preprocessing/visualization_feature_vectors_2D.ipynb
+++ b/preprocessing/visualization_feature_vectors_2D.ipynb
@@ -422,63 +422,63 @@
     "# print(\"done\")\n",
     "\n",
     "\n",
-    "import shutil\n",
+    "# import shutil\n",
     "\n",
-    "# Define the path to the parent folder\n",
-    "parent_folder = osp.join(data_dir, \"scenes\")\n",
+    "# # Define the path to the parent folder\n",
+    "# parent_folder = osp.join(data_dir, \"scenes\")\n",
     "\n",
-    "path = osp.join(data_dir, \"files\", \"to_be_deleted.txt\")\n",
-    "# Initialize an empty list to store UUIDs\n",
-    "directories_to_delete = []\n",
+    "# path = osp.join(data_dir, \"files\", \"to_be_deleted.txt\")\n",
+    "# # Initialize an empty list to store UUIDs\n",
+    "# directories_to_delete = []\n",
     "\n",
-    "# Open the file in read mode\n",
-    "with open(path, 'r') as file:\n",
+    "# # Open the file in read mode\n",
+    "# with open(path, 'r') as file:\n",
     "    # Iterate over each line in the file\n",
-    "    for line in file:\n",
-    "        # Strip leading and trailing whitespace (including newlines)\n",
-    "        line = line.strip()\n",
-    "        # Append the UUID to the list\n",
-    "        directories_to_delete.append(line)\n",
+    "#     for line in file:\n",
+    "#         # Strip leading and trailing whitespace (including newlines)\n",
+    "#         line = line.strip()\n",
+    "#         # Append the UUID to the list\n",
+    "#         directories_to_delete.append(line)\n",
     "\n",
-    "scan_info_file = osp.join(data_dir, \"files\", '3RScan.json')\n",
-    "file = open(scan_info_file)\n",
-    "data = json.load(file)\n",
-    "file.close()\n",
-    "refscans2scans = {}\n",
-    "scans2refscans = {}\n",
-    "all_scans_split = []\n",
-    "for scan_data in data:\n",
-    "    ref_scan_id = scan_data['reference']\n",
-    "    refscans2scans[ref_scan_id] = [ref_scan_id]\n",
-    "    scans2refscans[ref_scan_id] = ref_scan_id\n",
-    "    for scan in scan_data['scans']:\n",
-    "            refscans2scans[ref_scan_id].append(scan['reference'])\n",
-    "            scans2refscans[scan['reference']] = ref_scan_id\n",
-    "\n",
-    "\n",
-    "all_scans_split = []\n",
-    "    ## get all scans within the split(ref_scan + rescan)\n",
-    "for ref_scan in directories_to_delete:\n",
-    "    all_scans_split += refscans2scans[ref_scan]\n",
-    "\n",
-    "scan_ids = all_scans_split\n",
+    "# scan_info_file = osp.join(data_dir, \"files\", '3RScan.json')\n",
+    "# file = open(scan_info_file)\n",
+    "# data = json.load(file)\n",
+    "# file.close()\n",
+    "# refscans2scans = {}\n",
+    "# scans2refscans = {}\n",
+    "# all_scans_split = []\n",
+    "# for scan_data in data:\n",
+    "#     ref_scan_id = scan_data['reference']\n",
+    "#     refscans2scans[ref_scan_id] = [ref_scan_id]\n",
+    "#     scans2refscans[ref_scan_id] = ref_scan_id\n",
+    "#     for scan in scan_data['scans']:\n",
+    "#             refscans2scans[ref_scan_id].append(scan['reference'])\n",
+    "#             scans2refscans[scan['reference']] = ref_scan_id\n",
     "\n",
     "\n",
-    "print(\"scanids\", len(scan_ids))\n",
-    "print(\"parent folder\", parent_folder)\n",
-    "# Iterate over the list and delete each directory\n",
-    "for dir_name in scan_ids:\n",
-    "    dir_path = os.path.join(parent_folder, dir_name)\n",
+    "# all_scans_split = []\n",
+    "#     ## get all scans within the split(ref_scan + rescan)\n",
+    "# for ref_scan in directories_to_delete:\n",
+    "#     all_scans_split += refscans2scans[ref_scan]\n",
+    "\n",
+    "# scan_ids = all_scans_split\n",
+    "\n",
+    "\n",
+    "# print(\"scanids\", len(scan_ids))\n",
+    "# print(\"parent folder\", parent_folder)\n",
+    "# # Iterate over the list and delete each directory\n",
+    "# for dir_name in scan_ids:\n",
+    "#     dir_path = os.path.join(parent_folder, dir_name)\n",
     "    \n",
-    "    # Check if the directory exists\n",
-    "    if os.path.exists(dir_path):\n",
-    "        # Delete the directory and all its contents\n",
-    "        shutil.rmtree(dir_path)\n",
-    "        print(f\"Deleted directory: {dir_path}\")\n",
-    "    else:\n",
-    "        print(f\"Directory not found: {dir_path}\")\n",
+    "#     # Check if the directory exists\n",
+    "#     if os.path.exists(dir_path):\n",
+    "#         # Delete the directory and all its contents\n",
+    "#         shutil.rmtree(dir_path)\n",
+    "#         print(f\"Deleted directory: {dir_path}\")\n",
+    "#     else:\n",
+    "#         print(f\"Directory not found: {dir_path}\")\n",
     "\n",
-    "print(\"Completed directory deletion.\")\n",
+    "# print(\"Completed directory deletion.\")\n",
     "\n",
     "\n",
     "\n",
