--- a/preprocessing/feature_evaluation_dim_reduced.ipynb
+++ b/preprocessing/feature_evaluation_dim_reduced.ipynb
@@ -344,50 +344,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id mateches {1: (23, array([0.01570327], dtype=float32)), 2: (12, array([0.01312272], dtype=float32)), 3: (1, array([0.02637017], dtype=float32)), 4: (5, array([0.00739837], dtype=float32)), 5: (9, array([0.0159371], dtype=float32)), 6: (8, array([0.01632525], dtype=float32)), 7: (18, array([0.02054708], dtype=float32)), 8: (9, array([0.00719253], dtype=float32)), 9: (11, array([0.01522948], dtype=float32)), 10: (10, array([0.00754274], dtype=float32)), 11: (5, array([0.01760075], dtype=float32))}\n",
+      "fcf66d88-622d-291c-871f-699b2d063630\n",
+      "id mateches {1: (23, array([0.01570257], dtype=float32)), 2: (12, array([0.01312101], dtype=float32)), 3: (1, array([0.02636981], dtype=float32)), 4: (5, array([0.00739935], dtype=float32)), 5: (9, array([0.01593802], dtype=float32)), 6: (8, array([0.01633052], dtype=float32)), 7: (18, array([0.02055096], dtype=float32)), 8: (9, array([0.00719532], dtype=float32)), 9: (11, array([0.01523954], dtype=float32)), 10: (10, array([0.00754297], dtype=float32)), 11: (5, array([0.01760643], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  5.  8.  9. 10. 11. 12. 18. 23.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.3663194444444444, 0.3663194444444444)\n",
-      "id mateches {1: (23, array([0.02890418], dtype=float32)), 2: (27, array([0.01526387], dtype=float32)), 3: (27, array([0.00507575], dtype=float32)), 4: (22, array([0.02434961], dtype=float32)), 5: (8, array([0.01412568], dtype=float32)), 6: (1, array([0.02946728], dtype=float32)), 7: (4, array([0.00834342], dtype=float32)), 8: (20, array([0.00536672], dtype=float32)), 9: (8, array([0.02702678], dtype=float32)), 10: (2, array([0.00914445], dtype=float32)), 11: (1, array([0.00797968], dtype=float32))}\n",
+      "id mateches {1: (23, array([0.02890891], dtype=float32)), 2: (27, array([0.01526292], dtype=float32)), 3: (27, array([0.00507543], dtype=float32)), 4: (22, array([0.0243516], dtype=float32)), 5: (8, array([0.01412289], dtype=float32)), 6: (1, array([0.02946538], dtype=float32)), 7: (4, array([0.00834347], dtype=float32)), 8: (20, array([0.00537192], dtype=float32)), 9: (8, array([0.02702368], dtype=float32)), 10: (2, array([0.00913131], dtype=float32)), 11: (1, array([0.00797873], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  2.  4.  8. 20. 22. 23. 27.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5416666666666666, 0.5416666666666666)\n",
-      "id mateches {1: (26, array([0.01202647], dtype=float32)), 2: (21, array([0.02524503], dtype=float32)), 3: (24, array([0.00897213], dtype=float32)), 4: (22, array([0.03573671], dtype=float32)), 5: (18, array([0.01583523], dtype=float32)), 6: (1, array([0.02371688], dtype=float32)), 7: (3, array([0.01119746], dtype=float32)), 8: (20, array([0.0151446], dtype=float32)), 9: (20, array([0.00879547], dtype=float32)), 10: (11, array([0.00762003], dtype=float32)), 11: (11, array([0.00954886], dtype=float32)), 12: (8, array([0.02242653], dtype=float32)), 13: (1, array([0.01104789], dtype=float32)), 14: (3, array([0.01909309], dtype=float32)), 15: (103, array([0.0082426], dtype=float32))}\n",
+      "id mateches {1: (26, array([0.01202489], dtype=float32)), 2: (21, array([0.02526512], dtype=float32)), 3: (24, array([0.00897585], dtype=float32)), 4: (22, array([0.03573767], dtype=float32)), 5: (18, array([0.01583409], dtype=float32)), 6: (1, array([0.02371536], dtype=float32)), 7: (3, array([0.01118859], dtype=float32)), 8: (20, array([0.01512669], dtype=float32)), 9: (20, array([0.00880561], dtype=float32)), 10: (11, array([0.00763051], dtype=float32)), 11: (11, array([0.0095577], dtype=float32)), 12: (8, array([0.0224216], dtype=float32)), 13: (1, array([0.01104942], dtype=float32)), 14: (3, array([0.01908849], dtype=float32)), 15: (103, array([0.00825424], dtype=float32))}\n",
       "unique numbers in new img patchwise  [  1.   3.   8.  11.  18.  20.  21.  22.  24.  26. 103.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.515625, 0.515625)\n",
-      "id mateches {1: (26, array([0.01065832], dtype=float32)), 2: (22, array([0.0252062], dtype=float32)), 3: (1, array([0.01333159], dtype=float32)), 4: (1, array([0.02454306], dtype=float32)), 5: (6, array([0.0133764], dtype=float32)), 6: (8, array([0.02142951], dtype=float32)), 7: (5, array([0.01204913], dtype=float32))}\n",
+      "id mateches {1: (26, array([0.01067165], dtype=float32)), 2: (22, array([0.02520757], dtype=float32)), 3: (1, array([0.01333263], dtype=float32)), 4: (1, array([0.02454256], dtype=float32)), 5: (6, array([0.01337301], dtype=float32)), 6: (8, array([0.0214241], dtype=float32)), 7: (5, array([0.01204956], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  5.  6.  8. 22. 26.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5607638888888888, 0.5607638888888888)\n",
-      "id mateches {1: (26, array([0.01185611], dtype=float32)), 2: (22, array([0.00481515], dtype=float32)), 3: (26, array([0.01362899], dtype=float32)), 4: (1, array([0.0236815], dtype=float32)), 5: (8, array([0.0145503], dtype=float32)), 6: (6, array([0.01989206], dtype=float32)), 7: (2, array([0.01205223], dtype=float32))}\n",
+      "id mateches {1: (26, array([0.01186473], dtype=float32)), 2: (22, array([0.00481418], dtype=float32)), 3: (26, array([0.01362096], dtype=float32)), 4: (1, array([0.02368042], dtype=float32)), 5: (8, array([0.01454909], dtype=float32)), 6: (6, array([0.01989031], dtype=float32)), 7: (2, array([0.01205758], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  2.  6.  8. 22. 26.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5486111111111112, 0.5486111111111112)\n",
-      "id mateches {1: (26, array([0.01400753], dtype=float32)), 2: (12, array([0.0113122], dtype=float32)), 3: (1, array([0.01167631], dtype=float32)), 4: (100, array([0.01328255], dtype=float32))}\n",
+      "id mateches {1: (26, array([0.01401939], dtype=float32)), 2: (12, array([0.01131096], dtype=float32)), 3: (1, array([0.01167667], dtype=float32)), 4: (100, array([0.01327131], dtype=float32))}\n",
       "unique numbers in new img patchwise  [  1.  12.  26. 100.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6006944444444444, 0.6006944444444444)\n",
-      "id mateches {1: (26, array([0.0171039], dtype=float32)), 2: (1, array([0.00605737], dtype=float32)), 3: (20, array([0.0172584], dtype=float32)), 4: (1, array([0.00771072], dtype=float32)), 5: (1, array([0.0209359], dtype=float32)), 6: (5, array([0.01264728], dtype=float32))}\n",
+      "id mateches {1: (26, array([0.01710843], dtype=float32)), 2: (1, array([0.0060561], dtype=float32)), 3: (20, array([0.01725049], dtype=float32)), 4: (1, array([0.00771001], dtype=float32)), 5: (1, array([0.02092633], dtype=float32)), 6: (5, array([0.01264273], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  5. 20. 26.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6006944444444444, 0.6006944444444444)\n",
-      "id mateches {1: (22, array([0.02175163], dtype=float32)), 2: (11, array([0.0103588], dtype=float32)), 3: (8, array([0.00425652], dtype=float32)), 4: (1, array([0.01351001], dtype=float32)), 5: (20, array([0.0149256], dtype=float32)), 6: (12, array([0.01384641], dtype=float32)), 7: (11, array([0.00765502], dtype=float32)), 8: (20, array([0.00820862], dtype=float32))}\n",
+      "id mateches {1: (22, array([0.02174875], dtype=float32)), 2: (11, array([0.01035352], dtype=float32)), 3: (8, array([0.00425589], dtype=float32)), 4: (1, array([0.01350946], dtype=float32)), 5: (20, array([0.01491873], dtype=float32)), 6: (12, array([0.01384708], dtype=float32)), 7: (11, array([0.00765689], dtype=float32)), 8: (20, array([0.00821186], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  8. 11. 12. 20. 22.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6631944444444444, 0.6631944444444444)\n",
-      "id mateches {1: (10, array([0.01616197], dtype=float32)), 2: (26, array([0.00555241], dtype=float32)), 3: (100, array([0.01794639], dtype=float32)), 4: (8, array([0.01908192], dtype=float32)), 5: (8, array([0.00891095], dtype=float32)), 6: (1, array([0.02480392], dtype=float32)), 7: (2, array([0.01241749], dtype=float32)), 8: (12, array([0.02260527], dtype=float32)), 9: (11, array([0.0106607], dtype=float32)), 10: (8, array([0.01770554], dtype=float32)), 11: (20, array([0.00505923], dtype=float32))}\n",
+      "id mateches {1: (10, array([0.01616625], dtype=float32)), 2: (26, array([0.00554907], dtype=float32)), 3: (100, array([0.01794502], dtype=float32)), 4: (8, array([0.01908244], dtype=float32)), 5: (8, array([0.00891102], dtype=float32)), 6: (1, array([0.02480602], dtype=float32)), 7: (2, array([0.01240853], dtype=float32)), 8: (12, array([0.02260482], dtype=float32)), 9: (11, array([0.01065981], dtype=float32)), 10: (8, array([0.01770717], dtype=float32)), 11: (20, array([0.00506238], dtype=float32))}\n",
       "unique numbers in new img patchwise  [  1.   2.   8.  10.  11.  12.  20.  26. 100.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.5763888888888888, 0.5763888888888888)\n",
-      "id mateches {1: (12, array([0.01616702], dtype=float32)), 2: (18, array([0.01358708], dtype=float32)), 3: (8, array([0.01839471], dtype=float32)), 4: (8, array([0.01075059], dtype=float32)), 5: (10, array([0.02290128], dtype=float32)), 6: (27, array([0.01288162], dtype=float32)), 7: (1, array([0.00711795], dtype=float32)), 8: (9, array([0.01533557], dtype=float32)), 9: (8, array([0.01702167], dtype=float32)), 10: (10, array([0.01594201], dtype=float32))}\n",
+      "id mateches {1: (12, array([0.01616373], dtype=float32)), 2: (18, array([0.01358317], dtype=float32)), 3: (8, array([0.01839462], dtype=float32)), 4: (8, array([0.01074163], dtype=float32)), 5: (10, array([0.02290149], dtype=float32)), 6: (27, array([0.01287582], dtype=float32)), 7: (1, array([0.00711869], dtype=float32)), 8: (9, array([0.01533436], dtype=float32)), 9: (8, array([0.01702213], dtype=float32)), 10: (10, array([0.01594253], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  8.  9. 10. 12. 18. 27.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.7517361111111112, 0.7517361111111112)\n",
-      "id mateches {1: (8, array([0.01344401], dtype=float32)), 2: (11, array([0.01987344], dtype=float32)), 3: (29, array([0.01038167], dtype=float32)), 4: (1, array([0.00971259], dtype=float32)), 5: (8, array([0.02098707], dtype=float32)), 6: (15, array([0.00808654], dtype=float32)), 7: (10, array([0.01273002], dtype=float32)), 8: (20, array([0.00767714], dtype=float32)), 9: (6, array([0.01147991], dtype=float32)), 10: (29, array([0.00824384], dtype=float32)), 11: (1, array([0.00750556], dtype=float32))}\n",
+      "id mateches {1: (8, array([0.0134435], dtype=float32)), 2: (11, array([0.01988258], dtype=float32)), 3: (29, array([0.01037943], dtype=float32)), 4: (1, array([0.00971572], dtype=float32)), 5: (8, array([0.02099512], dtype=float32)), 6: (15, array([0.00808532], dtype=float32)), 7: (10, array([0.01273016], dtype=float32)), 8: (20, array([0.0076775], dtype=float32)), 9: (6, array([0.01147836], dtype=float32)), 10: (29, array([0.00824305], dtype=float32)), 11: (1, array([0.00750424], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  6.  8. 10. 11. 15. 20. 29.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6076388888888888, 0.6076388888888888)\n",
-      "id mateches {1: (1, array([0.01386196], dtype=float32)), 2: (8, array([0.00739832], dtype=float32))}\n",
+      "id mateches {1: (1, array([0.01387142], dtype=float32)), 2: (8, array([0.00740642], dtype=float32))}\n",
       "unique numbers in new img patchwise  [1. 8.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6145833333333334, 0.6145833333333334)\n",
-      "id mateches {1: (5, array([0.00914396], dtype=float32)), 2: (8, array([0.01399027], dtype=float32)), 3: (1, array([0.01699795], dtype=float32)), 4: (11, array([0.01739462], dtype=float32)), 5: (1, array([0.02151607], dtype=float32)), 6: (10, array([0.01093858], dtype=float32)), 7: (20, array([0.01126606], dtype=float32)), 8: (11, array([0.00889421], dtype=float32))}\n",
+      "id mateches {1: (5, array([0.00914586], dtype=float32)), 2: (8, array([0.01399323], dtype=float32)), 3: (1, array([0.01699748], dtype=float32)), 4: (11, array([0.01740048], dtype=float32)), 5: (1, array([0.02151862], dtype=float32)), 6: (10, array([0.01093907], dtype=float32)), 7: (20, array([0.0112661], dtype=float32)), 8: (11, array([0.00889755], dtype=float32))}\n",
       "unique numbers in new img patchwise  [ 1.  5.  8. 10. 11. 20.]\n",
       "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is (0.6388888888888888, 0.6388888888888888)\n",
       "mean of total accuracy  0.5836004273504274\n"
@@ -399,6 +400,7 @@
     "\"\"\"\n",
     "for the current scene: access all the precomputed dinov2 features and do pca of the space\n",
     "\"\"\"\n",
+    "print(new_scan_id)\n",
     "#get all the features of the current scene\n",
     "all_info_path = osp.join(data_dir,\"files/Features2D/projection/DinoV2/patch_32_18\", curr_scan_id + \".pkl\")\n",
     "with open(all_info_path, 'rb') as file:\n",
@@ -509,27 +511,31 @@
     "    # display the newly computed images next to each other\n",
     "    # \"\"\"\n",
     "\n",
-    "    # #display the gt_image and the new patchwise image next to each other\n",
-    "    # title1 = \"gt_patces\"\n",
-    "    # title2 = \"dino_seg_patches\"\n",
+    "    #display the gt_image and the new patchwise image next to each other\n",
+    "    title1 = \"gt_patces\"\n",
+    "    title2 = \"dino_seg_patches\"\n",
     "\n",
-    "    # # Create a blank canvas to combine images horizontally\n",
-    "    # height = max(gt_input_colour.shape[0], new_img_colour.shape[0])  # Max height of both images\n",
-    "    # width = gt_input_colour.shape[1] + new_img_colour.shape[1] + 20  # Total width of both images with a small gap\n",
-    "    # combined_image = np.zeros((height, width, 3), dtype=np.uint8)\n",
+    "    # Swap color channels from RGB to BGR (if needed)\n",
+    "    gt_input_colour_bgr = gt_input_colour[..., ::-1]  # Convert RGB to BGR\n",
+    "    new_img_colour_bgr = new_img_colour[..., ::-1]    # Convert RGB to BGR\n",
     "\n",
-    "    # # Place images with titles on the blank canvas\n",
-    "    # combined_image[:gt_input_colour.shape[0], :gt_input_colour.shape[1]] = gt_input_colour\n",
-    "    # combined_image[:new_img_colour.shape[0], gt_input_colour.shape[1] + 20:] = new_img_colour\n",
+    "    # Create a blank canvas to combine images horizontally\n",
+    "    height = max(gt_input_colour.shape[0], new_img_colour.shape[0])  # Max height of both images\n",
+    "    width = gt_input_colour.shape[1] + new_img_colour.shape[1] + 20  # Total width of both images with a small gap\n",
+    "    combined_image = np.zeros((height, width, 3), dtype=np.uint8)\n",
     "\n",
-    "    # # Add titles to the images\n",
-    "    # cv2.putText(combined_image, title1, (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
-    "    # cv2.putText(combined_image, title2, (gt_input_colour.shape[1] + 30, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "    # Place images with titles on the blank canvas\n",
+    "    combined_image[:gt_input_colour.shape[0], :gt_input_colour.shape[1]] = gt_input_colour\n",
+    "    combined_image[:new_img_colour.shape[0], gt_input_colour.shape[1] + 20:] = new_img_colour\n",
     "\n",
-    "    # # Display the combined image\n",
-    "    # cv2.imshow('Two Images Side by Side', combined_image)\n",
-    "    # cv2.waitKey(0)\n",
-    "    # cv2.destroyAllWindows()\n",
+    "    # Add titles to the images\n",
+    "    cv2.putText(combined_image, title1, (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "    cv2.putText(combined_image, title2, (gt_input_colour.shape[1] + 30, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "\n",
+    "    # Display the combined image\n",
+    "    cv2.imshow('Two Images Side by Side', combined_image)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n",
     "\n",
     "np_accuracy = np.array(total_accuracy)\n",
     "mean = np.mean(np_accuracy)\n",
