worked on a file with the purpose to compute the different combinations of features we can obtain (thresholding , k for k nearest neighbour using a tree or smth, also added visualization for the matches for later puposes. separate file to compute the features once the parameters are okidoki

--- a/preprocessing/feature_evaluation_dim_reduced.ipynb
+++ b/preprocessing/feature_evaluation_dim_reduced.ipynb
@@ -196,7 +196,7 @@
     "    # Convert Counter to dictionary with most frequent color\n",
     "    for object_id, color_counter in object_colors.items():\n",
     "        most_common_color = color_counter.most_common(1)[0][0]\n",
-    "        object_colors[object_id] = np.array(most_common_color[::-1])\n",
+    "        object_colors[object_id] = np.array(most_common_color)\n",
     "    \n",
     "    return object_colors\n",
     "\n",
