--- a/unused_stuff/ray_intersection_in_rescan.ipynb
+++ b/unused_stuff/ray_intersection_in_rescan.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,9 +446,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mproject_mesh_diff\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscenes_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 11\u001b[0m, in \u001b[0;36mproject_mesh_diff\u001b[0;34m(data_dir, scenes_dir, curr_scan_id, new_scan_id, frame_number)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03mRead/prepare the data of the current mesh (mesh, colours, objid, globalid)\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m#get the current coordinate system in the new coordinate system\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m mesh_file \u001b[38;5;241m=\u001b[39m \u001b[43mtransform_to_coordinates\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# load labels based on current mesh \"status quo\"\u001b[39;00m\n\u001b[1;32m     15\u001b[0m plydata_npy \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(osp\u001b[38;5;241m.\u001b[39mjoin(scenes_dir, curr_scan_id, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m), allow_pickle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[4], line 30\u001b[0m, in \u001b[0;36mtransform_to_coordinates\u001b[0;34m(data_dir, curr_scan_id, new_scan_id)\u001b[0m\n\u001b[1;32m     28\u001b[0m     rescan2ref \u001b[38;5;241m=\u001b[39m rescan2ref\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     29\u001b[0m     ref2rescan \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39minv(rescan2ref)\n\u001b[0;32m---> 30\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtransform_mesh\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mref2rescan\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# current is rescan, new is reference -> simple transformation\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m scan3r\u001b[38;5;241m.\u001b[39mis_reference(data_dir, new_scan_id):\n",
+      "Cell \u001b[0;32mIn[3], line 23\u001b[0m, in \u001b[0;36mtransform_mesh\u001b[0;34m(curr_scan_id, new_scan_id, matrix)\u001b[0m\n\u001b[1;32m     20\u001b[0m directory \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mdirname(output_path)\n\u001b[1;32m     21\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(directory, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 23\u001b[0m \u001b[43mplydata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output_path\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/plyfile.py:414\u001b[0m, in \u001b[0;36mPlyData.write\u001b[0;34m(self, stream)\u001b[0m\n\u001b[1;32m    412\u001b[0m     stream\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    413\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m elt \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m:\n\u001b[0;32m--> 414\u001b[0m         \u001b[43melt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_write\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstream\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbyte_order\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    415\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    416\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m must_close:\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/plyfile.py:669\u001b[0m, in \u001b[0;36mPlyElement._write\u001b[0;34m(self, stream, text, byte_order)\u001b[0m\n\u001b[1;32m    664\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m    665\u001b[0m \u001b[38;5;124;03mWrite the data to a PLY file.\u001b[39;00m\n\u001b[1;32m    666\u001b[0m \n\u001b[1;32m    667\u001b[0m \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m    668\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m text:\n\u001b[0;32m--> 669\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_write_txt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstream\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    670\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    671\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_have_list:\n\u001b[1;32m    672\u001b[0m         \u001b[38;5;66;03m# There are list properties, so serialization is\u001b[39;00m\n\u001b[1;32m    673\u001b[0m         \u001b[38;5;66;03m# slightly complicated.\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/plyfile.py:725\u001b[0m, in \u001b[0;36mPlyElement._write_txt\u001b[0;34m(self, stream)\u001b[0m\n\u001b[1;32m    722\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mproperties:\n\u001b[1;32m    723\u001b[0m     fields\u001b[38;5;241m.\u001b[39mextend(prop\u001b[38;5;241m.\u001b[39m_to_fields(rec[prop\u001b[38;5;241m.\u001b[39mname]))\n\u001b[0;32m--> 725\u001b[0m \u001b[43m_np\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msavetxt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstream\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mfields\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m%.18g\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnewline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36msavetxt\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/numpy/lib/npyio.py:1503\u001b[0m, in \u001b[0;36msavetxt\u001b[0;34m(fname, X, fmt, delimiter, newline, header, footer, comments, encoding)\u001b[0m\n\u001b[1;32m   1500\u001b[0m     fmt \u001b[38;5;241m=\u001b[39m asstr(fmt)\n\u001b[1;32m   1501\u001b[0m delimiter \u001b[38;5;241m=\u001b[39m asstr(delimiter)\n\u001b[0;32m-> 1503\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mWriteWrap\u001b[39;00m:\n\u001b[1;32m   1504\u001b[0m     \u001b[38;5;124;03m\"\"\"Convert to bytes on bytestream inputs.\u001b[39;00m\n\u001b[1;32m   1505\u001b[0m \n\u001b[1;32m   1506\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m   1507\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, fh, encoding):\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "project_mesh_diff(data_dir, scenes_dir,curr_scan_id, new_scan_id, frame_number)"
    ]
@@ -614,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
