visualization for the center of the objects addede

--- a/sceneGraph_update/visualization/obj_centers_and_mesh.ipynb
+++ b/sceneGraph_update/visualization/obj_centers_and_mesh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -23,10 +23,12 @@
     "import matplotlib.patches as patches\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import random\n",
+    "from collections import Counter\n",
     "import open3d as o3d\n",
     "import open3d.core as o3c\n",
     "import json\n",
     "import subprocess\n",
+    "\n",
     "import pickle\n",
     "from  plyfile import PlyData\n",
     "import torch\n",
@@ -58,8 +60,251 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "compute the object centers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1.0: array([-0.8052995 , -0.09936274, -1.3703212 ], dtype=float32), 2.0: array([-1.2946086,  1.306983 , -0.9697552], dtype=float32), 3.0: array([-0.15803622,  1.1367626 , -1.2699404 ], dtype=float32), 4.0: array([-0.67319775,  1.946421  , -0.0800736 ], dtype=float32), 5.0: array([-2.7239525 ,  0.45978028,  0.09460288], dtype=float32), 6.0: array([-2.7053003 ,  0.1962266 , -0.15341012], dtype=float32), 7.0: array([-3.0109458 ,  0.5486571 ,  0.00872199], dtype=float32), 8.0: array([-1.038778  , -1.3289794 , -0.20251158], dtype=float32), 9.0: array([-2.2459922, -0.9997788, -0.0482852], dtype=float32), 10.0: array([-1.6873078 ,  2.2443333 , -0.09623797], dtype=float32), 11.0: array([ 1.4278423 , -1.4321533 , -0.44935113], dtype=float32), 12.0: array([ 1.6850723 , -0.5469698 ,  0.25493035], dtype=float32), 13.0: array([ 1.4222167 ,  1.0109353 , -0.15785623], dtype=float32), 14.0: array([-0.4559756,  0.1674362,  1.0433657], dtype=float32), 15.0: array([-2.1124775 , -0.7270743 , -0.81892896], dtype=float32), 16.0: array([-0.5008316 , -1.1958945 , -0.90816677], dtype=float32), 17.0: array([ 1.4811703 , -0.17415097, -1.0383254 ], dtype=float32), 18.0: array([ 1.2870289 , -1.4633186 , -0.10872204], dtype=float32), 19.0: array([-0.54121363, -1.3276255 ,  0.28154865], dtype=float32), 20.0: array([ 1.9356661 ,  0.4195019 , -0.52504027], dtype=float32), 21.0: array([ 1.2535974, -0.6173411, -1.2552197], dtype=float32), 22.0: array([ 0.83837295,  0.55643594, -0.63574547], dtype=float32), 23.0: array([ 0.3073182 ,  1.4359397 , -0.99942005], dtype=float32), 24.0: array([-2.397911  ,  0.46325502, -1.0213445 ], dtype=float32), 25.0: array([-1.682378 , -0.7986652, -1.1490529], dtype=float32), 26.0: array([-2.6578934 , -0.9827671 , -0.51640093], dtype=float32), 27.0: array([-2.6792126 , -0.23641495, -1.1436869 ], dtype=float32), 28.0: array([-1.6664672 , -0.8488177 , -0.57787055], dtype=float32), 29.0: array([-0.9693622, -1.1739445, -0.3485122], dtype=float32), 30.0: array([-0.2824371, -1.1522596, -1.1514637], dtype=float32), 31.0: array([ 0.03746433, -1.3540598 , -0.51787156], dtype=float32), 32.0: array([-0.08150912, -1.5629522 ,  0.36467594], dtype=float32), 33.0: array([ 1.3815086 , -0.00559451, -0.66566664], dtype=float32), 34.0: array([ 1.3912117 , -0.60584694, -0.5463822 ], dtype=float32), 35.0: array([ 1.4740858 , -0.29535508, -0.32943353], dtype=float32), 38.0: array([-1.9991583,  1.650212 , -0.6821137], dtype=float32), 39.0: array([-2.2739704,  1.5103513, -0.6597504], dtype=float32), 40.0: array([-0.87220234,  1.157962  , -0.8344074 ], dtype=float32), 41.0: array([ 0.96002465,  1.3340939 , -1.2445989 ], dtype=float32)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#access the data of the object centers\n",
+    "curr_scene_path = osp.join(data_dir, \"files\", \"orig\", \"data\", curr_scan_id + \".pkl\")\n",
+    "with open(curr_scene_path, 'rb') as f:\n",
+    "    data = pickle.load(f)\n",
+    "\n",
+    "obj_ids_pkl = data[\"objects_id\"]\n",
+    "\n",
+    "\n",
+    "#access the things for the mesh\n",
+    "pathToMesh = osp.join(data_dir,\"scenes\", scan_id, \"labels.instances.align.annotated.v2.ply\")\n",
+    "ply_data = PlyData.read(pathToMesh)\n",
+    "vertices = ply_data['vertex'].data\n",
+    "vertex_array = np.array([list(vertex) for vertex in vertices])\n",
+    "\n",
+    "# Extract x, y, z coordinates and objectId\n",
+    "x = vertex_array[:, 0]\n",
+    "y = vertex_array[:, 1]\n",
+    "z = vertex_array[:, 2]\n",
+    "object_ids_mesh = vertex_array[:, 6]  # Assuming 'objectId' is the 7th property\n",
+    "\n",
+    "unique_object_ids = np.unique(object_ids_mesh)\n",
+    "\n",
+    "bounding_boxes_tmp = {}\n",
+    "centroids = {}\n",
+    "#go over every id and compute the box\n",
+    "for obj_id in unique_object_ids:\n",
+    "                #we want the same ids for the boxes\n",
+    "                if obj_id in obj_ids_pkl:\n",
+    "                        # Filter vertices by object ID\n",
+    "                        obj_mask = object_ids_mesh == obj_id\n",
+    "                        obj_coords = np.vstack((x[obj_mask], y[obj_mask], z[obj_mask])).T\n",
+    "                        \n",
+    "                        #also compute the centroid\n",
+    "                        centroid = np.mean(obj_coords, axis=0)\n",
+    "                        centroids[obj_id] = centroid\n",
+    "\n",
+    "print(centroids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this segment gets for an object id the colour the object is assigned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for a given scene get the colours of the differnt object_ids as a dictionary\n",
+    "def get_id_colours(data_dir,scan_id):\n",
+    "    #access the mesh file to get the colour of the ids\n",
+    "    mesh_file = osp.join(data_dir,\"scenes\", scan_id, \"labels.instances.annotated.v2.ply\")\n",
+    "    ply_data = PlyData.read(mesh_file)\n",
+    "    # Extract vertex data\n",
+    "    vertices = ply_data['vertex']\n",
+    "    vertex_count = len(vertices)\n",
+    "    \n",
+    "    # Initialize dictionary to store object_id -> color mappings\n",
+    "    object_colors = {}\n",
+    "    \n",
+    "   # Iterate through vertices\n",
+    "    for i in range(vertex_count):\n",
+    "        vertex = vertices[i]\n",
+    "        object_id = vertex['objectId']\n",
+    "        color = (vertex['red'], vertex['green'], vertex['blue'])\n",
+    "        \n",
+    "        # Check if object_id already in dictionary, otherwise initialize a Counter\n",
+    "        if object_id in object_colors:\n",
+    "            object_colors[object_id][color] += 1\n",
+    "        else:\n",
+    "            object_colors[object_id] = Counter({color: 1})\n",
+    "    \n",
+    "    # Convert Counter to dictionary with most frequent color\n",
+    "    for object_id, color_counter in object_colors.items():\n",
+    "        most_common_color = color_counter.most_common(1)[0][0]\n",
+    "        object_colors[object_id] = np.array(most_common_color)\n",
+    "    \n",
+    "    return object_colors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "access the data of the object centers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#access the data of the object centers\n",
+    "curr_scene_path = osp.join(data_dir, \"files\", \"orig\", \"data\", curr_scan_id + \".pkl\")\n",
+    "with open(curr_scene_path, 'rb') as f:\n",
+    "    data = pickle.load(f)\n",
+    "\n",
+    "# Check if the loaded data is a dictionary\n",
+    "if isinstance(data, dict):\n",
+    "    print(\"Keys in the pkl file:\")\n",
+    "    for key in data.keys():\n",
+    "        print(key)\n",
+    "else:\n",
+    "    print(\"The loaded data is not a dictionary. It is of type:\", type(data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this codesegment is here to make sure that the data is alligned before accessed + it visualizes the points based on npy file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def load_point_cloud_from_npy(npy_file_path):\n",
+    "    # Load the .npy file\n",
+    "    data = np.load(npy_file_path, allow_pickle=True)\n",
+    "\n",
+    "    # Extract the fields (x, y, z, and RGB)\n",
+    "    x = data['x']\n",
+    "    y = data['y']\n",
+    "    z = data['z']\n",
+    "\n",
+    "    # Extract the RGB color information (optional)\n",
+    "    r = data['red']\n",
+    "    g = data['green']\n",
+    "    b = data['blue']\n",
+    "\n",
+    "    # Create a numpy array of the 3D coordinates\n",
+    "    points = np.column_stack((x, y, z))  # Combine x, y, z into an array of points\n",
+    "\n",
+    "    # Create a numpy array of the RGB colors\n",
+    "    colors = np.column_stack((r, g, b)) / 255.0  # Normalize to [0, 1]\n",
+    "    \n",
+    "\n",
+    "    # Create an Open3D point cloud object\n",
+    "    pcd = o3d.geometry.PointCloud()\n",
+    "\n",
+    "    # Set the points and colors to the point cloud\n",
+    "    pcd.points = o3d.utility.Vector3dVector(points)\n",
+    "    pcd.colors = o3d.utility.Vector3dVector(colors)\n",
+    "\n",
+    "    return pcd\n",
+    "\n",
+    "def create_centroid_point_cloud(centroids, color=[1, 0, 0], radius=0.1):\n",
+    "    # Create a new point cloud for centroids\n",
+    "    centroid_pcd = o3d.geometry.PointCloud()\n",
+    "    color_dict = get_id_colours(data_dir, curr_scan_id)\n",
+    "    # Convert centroids to numpy array if not already\n",
+    "    centroid_points = np.array(list(centroids.values()))\n",
+    "\n",
+    "    # Create a point cloud for centroids\n",
+    "    centroid_pcd.points = o3d.utility.Vector3dVector(centroid_points)\n",
+    "     # Initialize list to store colors\n",
+    "    centroid_colors = []\n",
+    "\n",
+    "    for obj_id in centroids.keys():\n",
+    "        # Fetch color for the current object ID from color_dict\n",
+    "        color = color_dict.get(obj_id, [1.0, 1.0, 1.0])  # Default to white if not found\n",
+    "        normalized_color = np.array(color) / 255.0\n",
+    "        normalized_color = normalized_color*0.5\n",
+    "        centroid_colors.append(normalized_color)\n",
+    "    \n",
+    "    centroid_pcd.colors = o3d.utility.Vector3dVector(centroid_colors)\n",
+    "\n",
+    "    # Create spheres to visualize centroids as larger blobs\n",
+    "    spheres = []\n",
+    "    for point, color in zip(centroid_points, centroid_colors):\n",
+    "        sphere = o3d.geometry.TriangleMesh.create_sphere(radius=radius)\n",
+    "        sphere.translate(point)\n",
+    "        sphere.paint_uniform_color(color)\n",
+    "        spheres.append(sphere)\n",
+    "\n",
+    "    # # Set a uniform color for all centroids\n",
+    "    # centroid_pcd.colors = o3d.utility.Vector3dVector([color] * len(centroid_points))\n",
+    "\n",
+    "    # # Create spheres to visualize centroids as larger blobs\n",
+    "    # spheres = []\n",
+    "    # for point in centroid_points:\n",
+    "    #     sphere = o3d.geometry.TriangleMesh.create_sphere(radius=radius)\n",
+    "    #     sphere.translate(point)\n",
+    "    #     sphere.paint_uniform_color(color)\n",
+    "    #     spheres.append(sphere)\n",
+    "    \n",
+    "    return centroid_pcd, spheres\n",
+    "\n",
+    "\n",
+    "data_ref =osp.join(scenes_dir, curr_scan_id, \"data.npy\")\n",
+    "ref_pointcloud = load_point_cloud_from_npy(data_ref)\n",
+    "\n",
+    "data_rescan = osp.join(scenes_dir, new_scan_id, \"data.npy\")\n",
+    "rescan_pointcloud = load_point_cloud_from_npy(data_rescan)\n",
+    "\n",
+    "centroid_pcd, centroid_spheres = create_centroid_point_cloud(centroids, color=[1, 0, 0], radius=0.1)\n",
+    "\n",
+    "\n",
+    "# Visualize both point clouds together\n",
+    "o3d.visualization.draw_geometries([ref_pointcloud, rescan_pointcloud] + centroid_spheres, window_name=\"Combined Point Clouds\", width=800, height=600)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this segment displays the meshes of the scans based on the ply file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +373,59 @@
     "\n",
     "vis.run()\n",
     "vis.destroy_window()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for the object centers we use the mesh to calculate it "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Field: x\n",
+      "[0.13    0.09    0.05    ... 1.37448 1.39    1.38084]\n",
+      "Field: y\n",
+      "[-1.15 -1.15 -1.15 ... -0.47 -0.49 -0.45]\n",
+      "Field: z\n",
+      "[ 1.04296   1.04576   1.04274  ... -0.41     -0.361669 -0.35    ]\n",
+      "Field: red\n",
+      "[227 227 227 ... 146 146 146]\n",
+      "Field: green\n",
+      "[119 119 119 ... 111 111 111]\n",
+      "Field: blue\n",
+      "[194 194 194 ... 194 194 194]\n",
+      "Field: objectId\n",
+      "[14 14 14 ... 34 34 34]\n",
+      "Field: globalId\n",
+      "[ 82  82  82 ... 476 476 476]\n",
+      "Field: NYU40\n",
+      "[22 22 22 ... 27 27 27]\n",
+      "Field: Eigen13\n",
+      "[3 3 3 ... 7 7 7]\n",
+      "Field: RIO27\n",
+      "[15 15 15 ... 18 18 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "plydata_npy = np.load(osp.join(scenes_dir, curr_scan_id, \"data.npy\"), allow_pickle=True)\n",
+    "\n",
+    "#print the names of the datafields\n",
+    "if plydata_npy.dtype.names:\n",
+    "        for name in plydata_npy.dtype.names:\n",
+    "                print(f\"Field: {name}\")\n",
+    "                print(plydata_npy[name])\n",
+    "else:\n",
+    "    print(plydata_npy)\n"
    ]
   }
  ],
