--- a/sceneGraph_update/visualization/obj_centers_and_mesh.ipynb
+++ b/sceneGraph_update/visualization/obj_centers_and_mesh.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +340,7 @@
     "\"\"\"\n",
     "New_scan_id mesh display in original coordinate system (rescan coord)\n",
     "\"\"\"\n",
-    "pathToMesh = osp.join(data_dir,\"scenes\", new_scan_id, \"labels.instances.annotated.v2.ply\")\n",
+    "pathToMesh = osp.join(data_dir,\"scenes\", new_scan_id, \"labels.instances.align.annotated.v2.ply\")\n",
     "new_mesh = o3d.io.read_triangle_mesh(pathToMesh)\n",
     "# Visualize the mesh\n",
     "\n",
